--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,17 @@ jobs:
       - name: Generate key
         run: php artisan key:generate
 
-      - name: Configure .env for no database
+      - name: Configure .env for deploy
         run: |
+          REPO_NAME=$(echo ${{ github.event.repository.name }})
+
+          echo "Setting APP_URL to production URL for final links..."
+          sed -i "s|APP_URL=.*|APP_URL=https://$(echo ${{ github.repository_owner }}).github.io/$(echo $REPO_NAME)|" .env
+
+          echo "Setting CRAWL_URL to localhost for crawler..."
+          echo "CRAWL_URL=http://localhost" >> .env
+
+          echo "Disabling database..."
           sed -i '/^DB_CONNECTION=/s/=.*/=null/' .env
           echo "SESSION_DRIVER=file" >> .env
 
@@ -42,7 +51,7 @@ jobs:
         run: php artisan config:clear
 
       - name: Build static site
-        run: php artisan export --base-url="portfolio-php"
+        run: php artisan export
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
